--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ header a {
   opacity: 0.8;
   font-size: 1.2rem;
   padding: 1rem;
+  z-index: 3;
+  color: white;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
   position: sticky;
   top: 0;
@@ -79,8 +81,8 @@ header a {
 .listInline>li a:hover {
   padding: 0.5rem;
   transform: translateY(-3%);
-  color: #2A2E34;
   background-color: #25E35F;
+  color: #2A2E34;
 }
 
 /**** MAIN ****/
@@ -98,20 +100,21 @@ main {
   gap: 20px;
   padding: 20px;
   place-items: center;
-  place-content: center space-evenly;
-  grid-auto-flow: row dense;
-  background-image: linear-gradient(#12181B, #2A2E35);
+  place-content: center space-around;
+  /* background-image: linear-gradient(#12181B, #2A2E35); */
   justify-items: center;
   margin: 2rem;
   color: white;
   font-family: "Sofia Pro", sans-serif;
   font-size: 1.2rem;
   border-radius: 0.5rem;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); */
 }
+
 .containerContent {
   grid-template-rows: repeat(2, auto);
 }
+
 .containerContentHome {
   grid-template-rows: auto;
 }
@@ -160,6 +163,7 @@ main {
   justify-content: space-between;
   align-items: center;
   row-gap: 1rem;
+  z-index: 1;
   background-image: linear-gradient(to top, #12181B, #2A2E35);
   padding: 2rem;
   border-radius: 0.5rem;
@@ -185,24 +189,24 @@ p {
   margin: 0.5rem;
 }
 
-.btnAddcart {
+.btn {
   text-transform: uppercase;
-  background-color: #498AFB;
-  color: white;
+  /* background-color: #498AFB; */
+  /* color: white; */
   font-family: "Sofia Pro", sans-serif;
-  border: none;
+  /* border: none; */
   border-radius: 0.5rem;
-  padding: 0.5em;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
+  padding: 0.5rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   cursor: pointer;
 }
 
-.btnAddcart:hover {
+/* .btnAddcart:hover {
   background-color: #25E35F;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
   transform: translateY(-3%);
-}
+} */
 
 .btnSubmit {
   background-color: #498AFB;
@@ -395,6 +399,10 @@ iframe {
     height: 15rem;
   }
 
+  .logoSiteNav {
+    display: none;
+  }
+
   .titleSite {
     display: none;
   }
@@ -446,6 +454,11 @@ iframe {
   .logoSite {
     width: 10rem;
     height: 10rem;
+  }
+
+  .logoSiteNav {
+    width: 5rem;
+    height: 5rem;
   }
 
   .titleSite {
