Se trabaja sobre diseño bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+
 /**** GLOBAL SETTINGS ****/
 * {
   margin: 0;
@@ -26,6 +28,10 @@ header a {
   text-decoration: none;
 }
 
+header a:hover {
+  color: white;
+}
+
 .titleSite {
   font-family: "Cubano", sans-serif;
   font-weight: 400;
@@ -47,24 +53,56 @@ header a {
 
 /**** NAVBAR ****/
 .navbar {
-  background-color: #2A2E35;
+  background-color: rgba(42, 46, 52, 0.9);
   font-family: "Cubano", sans-serif;
   font-weight: 400;
-  opacity: 0.8;
   font-size: 1.2rem;
   padding: 1rem;
   z-index: 10;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.5);
   position: sticky;
   top: 0;
 }
 
+.navbar-collapse {
+  justify-items: space-around;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+}
+
 .nav-link:hover {
   padding: 0.5rem;
-  transform: translateY(-3%);
   background-color: #25E35F;
-  color: #2A2E34;
+  color: #2A2E34!important;
 }
+
+.cartBar {
+  display: none;
+}
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  text-align: center;
+  border-radius: 0.5rem;
+}
+
+.carousel-caption h5 {
+  font-family: "Cubano", sans-serif;
+  font-weight: 400;
+  font-size: 3rem;
+  color: #25E35F;
+}
+
+.carousel-caption p {
+  font-family: "Sofia Pro", sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+}
+
 
 /**** MAIN ****/
 main {
@@ -77,18 +115,15 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: 350px;
-  gap: 20px;
-  padding: 20px;
+  gap: 2rem;
+  padding: 2rem;
   place-items: center;
   place-content: center space-around;
-  /* background-image: linear-gradient(#12181B, #2A2E35); */
   justify-items: center;
-  margin: 2rem;
   color: white;
   font-family: "Sofia Pro", sans-serif;
   font-size: 1.2rem;
   border-radius: 0.5rem;
-  /* box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); */
 }
 
 .containerContent {
@@ -99,16 +134,18 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(2, auto);
-  padding: 20px;
+  padding: 2rem;
 }
-.productsHome{
+
+.productsHome {
   display: flex;
   flex-wrap: nowrap;
   overflow: auto;
-  
+
   gap: 20px;
   padding: 20px;
 }
+
 .subtitle {
   grid-column: 1/-1;
   grid-template-rows: 50px;
@@ -116,6 +153,8 @@ main {
   color: #151B1E;
   padding: 0.5rem;
   background-color: #9166CC;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 0.5rem;
 }
 
 .contentSubtitle {
@@ -145,10 +184,10 @@ main {
   margin: 1rem;
 }
 
-.productCard, 
-.productCardHome{
+.productCard,
+.productCardHome {
   display: flex;
-  
+
   flex-direction: column;
   align-content: center;
   height: 350px;
@@ -170,7 +209,8 @@ main {
   flex: 0 0 auto;
 }
 
-.productCard, .productCardHome:hover {
+.productCard:hover,
+.productCardHome:hover {
   box-shadow: 5px 5px 20px black;
   transform: translateY(-3%);
 }
@@ -203,7 +243,7 @@ p {
   transform: translateY(-3%);
 } */
 
-.btnSubmit {
+/* .btnSubmit {
   background-color: #498AFB;
   color: white;
   font-size: 1rem;
@@ -219,9 +259,9 @@ p {
   background-color: #25E35F;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
   transform: translateY(-3%);
-}
+} */
 
-.container {
+.containerCart {
   display: flex;
   flex-direction: column;
   margin: 5rem;
@@ -232,33 +272,33 @@ p {
 
 .containerContentForm {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: auto;
   grid-template-areas:
     "subtitleForm"
     "form";
-  gap: 1rem;
-  background-image: linear-gradient(#12181B, #2A2E35);
-  margin: 2rem;
-  padding: 1rem;
+  gap: 2rem;
+  padding: 2rem;
   color: white;
   font-family: "Sofia Pro", sans-serif;
   font-size: 1.2rem;
   border-radius: 0.5rem;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
 }
 
 .subtitleForm {
   grid-area: subtitleForm;
   color: #151B1E;
   padding: 0.5rem;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
   background-color: #9166CC;
+  border-radius: 0.5rem;
 }
 
 .formGroup {
   grid-area: form;
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(to top, #12181B, #2A2E35);
+  background-image: linear-gradient(to bottom, #12181B, #2A2E35);
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
   width: min(40rem, 100%);
   height: 100%;
@@ -323,6 +363,8 @@ textarea {
   color: #151B1E;
   padding: 0.5rem;
   background-color: #9166CC;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 0.5rem;
 }
 
 .videoContainer {
@@ -335,6 +377,8 @@ textarea {
   color: #151B1E;
   padding: 0.5rem;
   background-color: #9166CC;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 0.5rem;
 }
 
 .mapContainer {
@@ -376,9 +420,21 @@ iframe {
   padding: 0.5rem;
 }
 
-.footerSocials>section img {
-  width: 2rem;
-  height: 2rem;
+.sectionSocials i {
+  padding: 0.5rem;
+  font-size: 2rem;
+  color: white;
+}
+
+
+#youtube:hover {
+  color: red;
+}
+#facebook:hover {
+  color: blue;
+}
+#instagram:hover {
+  color: rgb(211, 76, 98);
 }
 
 .centerItemsGrid {
@@ -491,6 +547,10 @@ iframe {
 
   .cart {
     display: none;
+  }
+
+  .cartBar {
+    display: block;
   }
 
   iframe {
