--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/**** Importacion biblioteca iconos Bootstrap ****/
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /**** GLOBAL SETTINGS ****/
@@ -5,6 +6,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 80%;
 }
 
 /**** BODY ****/
@@ -20,7 +25,7 @@ header {
   justify-content: center;
   align-items: center;
   background-image: linear-gradient(to left, #12181B, #2A2E35);
-  padding: 10px;
+  padding: 0.625rem;
 }
 
 header a {
@@ -65,6 +70,18 @@ header a:hover {
   color: #2A2E34 !important;
 }
 
+.btn-outline-success {
+  color: #CE5C5C;
+  border-color: #CE5C5C;
+  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
+}
+
+.btn-outline-success:hover {
+  color: #2A2E34;
+  border-color: #CE5C5C;
+  background-color: #CE5C5C;
+}
+
 .cartBar {
   display: none;
 }
@@ -105,8 +122,8 @@ main {
 
 .containerContent {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-auto-rows: 350px;
+  grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
+  grid-auto-rows: 21.875rem;
   gap: 2rem;
   padding: 2rem;
   place-items: center;
@@ -133,24 +150,24 @@ main {
   display: flex;
   flex-wrap: nowrap;
   overflow: auto;
-
-  gap: 20px;
-  padding: 20px;
+  gap: 1.25rem;
+  padding: 1.25rem;
 }
 
 .subtitle {
   grid-column: 1/-1;
-  grid-template-rows: 50px;
+  grid-template-rows: 3.125rem;
   color: #151B1E;
-  padding: 0.5rem;
+  padding: 1rem;
   background-color: #9166CC;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
   border-radius: 0.5rem;
 }
 
 .contentSubtitle {
   display: block;
   text-align: center;
+  margin-bottom: 0;
   font-family: "Cubano", sans-serif;
   font-weight: 400;
 }
@@ -176,7 +193,7 @@ main {
   display: flex;
   flex-direction: column;
   align-content: center;
-  height: 350px;
+  height: 21.875rem;
   justify-content: space-between;
   align-items: center;
   row-gap: 1rem;
@@ -186,9 +203,9 @@ main {
   color: white;
   font-family: "Sofia Pro", sans-serif;
   font-size: 1.2rem;
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0.0625rem 0.625rem rgba(0, 0, 0, 0.2);
   transition: all 400ms ease;
-  width: min(300px, 100%);
+  width: min(18.75rem, 100%);
 }
 
 .productCardHome {
@@ -197,7 +214,7 @@ main {
 
 .productCard:hover,
 .productCardHome:hover {
-  box-shadow: 5px 5px 20px black;
+  box-shadow: 0.3125rem 0.3125rem 1.25rem black;
   transform: translateY(-3%);
 }
 
@@ -236,8 +253,8 @@ main {
 .subtitleForm {
   grid-area: subtitleForm;
   color: #151B1E;
-  padding: 0.5rem;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
   background-color: #9166CC;
   border-radius: 0.5rem;
 }
@@ -247,7 +264,7 @@ main {
   display: flex;
   flex-direction: column;
   background-image: linear-gradient(to bottom, #12181B, #2A2E35);
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
   width: min(40rem, 100%);
   height: 100%;
@@ -303,7 +320,7 @@ textarea {
   color: #151B1E;
   padding: 0.5rem;
   background-color: #9166CC;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
   border-radius: 0.5rem;
 }
 
@@ -317,7 +334,7 @@ textarea {
   color: #151B1E;
   padding: 0.5rem;
   background-color: #9166CC;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
   border-radius: 0.5rem;
 }
 
@@ -328,7 +345,7 @@ textarea {
 iframe {
   border-radius: 0.5rem;
   margin: 3rem;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
   grid-area: media;
 }
 
@@ -414,7 +431,8 @@ iframe {
   padding: 1.5rem;
   border-radius: 2rem;
   border-width: 0.1rem;
-  border-color: #9166CC;
+  border-color: #25E35F;
+  box-shadow: 0px 0.0625rem 0.625rem #25E35F;
 }
 
 .sectionSocials>div h3 {
@@ -438,6 +456,7 @@ iframe {
   border-radius: 2rem;
   border-width: 0.1rem;
   border-color: #9166CC;
+  box-shadow: 0px 0.0625rem 0.625rem #9166CC;
 }
 
 .newsletter>form {
@@ -458,7 +477,8 @@ iframe {
   padding: 1rem;
   border-radius: 2rem;
   border-width: 0.1rem;
-  border-color: #9166CC;
+  border-color: #EE5352;
+  box-shadow: 0px 0.0625rem 0.625rem #EE5352;
 }
 
 .sectionSocials i {
@@ -519,6 +539,11 @@ iframe {
 
 /**** BREAKPOINT TABLET ****/
 @media only screen and (min-width: 600px) {
+
+  html {
+    font-size: 100%;
+  }
+
   header {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
