--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
 /**** Importacion biblioteca iconos Bootstrap ****/
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
+/**** Importacion fuentes al proyecto ****/
+@font-face {
+  font-family: "Cubano";
+  src: url(http://fonts.cdnfonts.com/css/cubano);
+  font-family: "Sofia Pro";
+  src: url(http://fonts.cdnfonts.com/css/sofia-pro);
+  font-family: "Roboto Mono";
+  src: url(http://fonts.cdnfonts.com/css/roboto-mono);
+}
+
 /**** GLOBAL SETTINGS ****/
 * {
   margin: 0;
