--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,23 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /**** Importacion fuentes al proyecto ****/
-@import url("http://fonts.cdnfonts.com/css/cubano");
-@import url("http://fonts.cdnfonts.com/css/sofia-pro");
-@import url("http://fonts.cdnfonts.com/css/roboto-mono");
+/* @import url("http://fonts.cdnfonts.com/css/cubano"); */
+/* @import url("http://fonts.cdnfonts.com/css/sofia-pro"); */
+/* @import url("http://fonts.cdnfonts.com/css/roboto-mono"); */
+
+@font-face {
+  font-family: "Cubano";
+  src: url("../fonts/Cubano.ttf");
+}
+
+@font-face {
+  font-family: "Sofia Pro";
+  src: url("../fonts/sofiapro-light.otf");
+}
+@font-face {
+  font-family: "Roboto Mono";
+  src: url("../fonts/RobotoMono-Light.ttf");
+}
 
 /**** GLOBAL SETTINGS ****/
 * {
