--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 /**** Importacion biblioteca iconos Bootstrap ****/
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/**** Importacion fuentes al proyecto ****/
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
+
 /* @import url("http://fonts.cdnfonts.com/css/cubano"); */
 /* @import url("http://fonts.cdnfonts.com/css/sofia-pro"); */
 /* @import url("http://fonts.cdnfonts.com/css/roboto-mono"); */
@@ -15,10 +16,12 @@
   font-family: "Sofia Pro";
   src: url("../fonts/sofiapro-light.otf");
 }
+
 @font-face {
   font-family: "Roboto Mono";
   src: url("../fonts/RobotoMono-Light.ttf");
 }
+
 
 /**** GLOBAL SETTINGS ****/
 * {
