Agregado de iconos/favicons

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ header a:hover {
 
 .rounded-pill {
   background-color: #9166CC;
-  color: #2A2E34;
+  color: white;
   font-family: "Sofia Pro", sans-serif;
   font-size: 0.7rem;
 }
