--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,19 @@
-/**** Importacion biblioteca iconos Bootstrap ****/
+/**** Importación biblioteca iconos Bootstrap CDN ****/
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
+/**** Importación biblioteca animaciones Animate CDN ****/
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
 
+/**** Importación biblioteca fuentes CDN ****/
 /* @import url("http://fonts.cdnfonts.com/css/cubano"); */
 /* @import url("http://fonts.cdnfonts.com/css/sofia-pro"); */
 /* @import url("http://fonts.cdnfonts.com/css/roboto-mono"); */
 
+/**** Importación local de fuentes ****/
 @font-face {
   font-family: "Cubano";
   src: url("../fonts/Cubano.ttf");
+  font-weight: 400;
 }
 
 @font-face {
@@ -22,6 +26,22 @@
   src: url("../fonts/RobotoMono-Light.ttf");
 }
 
+/**** Definición de variables ****/
+:root {
+  --color-bg-primary: #12181B;
+  --color-bg-secondary: #2A2E35;
+  --color-font-primary: #F5F5F5;
+  --color-font-secondary: #2A2E34;
+  --color-shadow: rgba(0, 0, 0, 0.5);
+  --color-shadow-hover: rgba(42, 46, 52, 0.9);
+  --color-violet: #9166CC;
+  --color-green: #25E35F;
+  --color-orange: #CE5C5C;
+  --color-blue: #51C5F7;
+  --font-primary: "Cubano", sans-serif;
+  --font-secondary: "Sofia Pro", sans-serif;
+  --font-tertiary: "Roboto Mono", monospace;
+}
 
 /**** GLOBAL SETTINGS ****/
 * {
@@ -36,8 +56,8 @@ html {
 
 /**** BODY ****/
 body {
-  background-image: linear-gradient(to top, #12181B, #2A2E35);
-  color: white;
+  background-image: linear-gradient(to top, var(--color-bg-primary), var(--color-bg-secondary));
+  color: var(--color-font-primary);
 }
 
 /**** HEADER ****/
@@ -46,91 +66,111 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to left, #12181B, #2A2E35);
+  background-image: linear-gradient(to left, var(--color-bg-primary), var(--color-bg-secondary));
   padding: 0.625rem;
 }
 
 header a {
-  color: white;
+  color: var(--color-font-primary);
   text-decoration: none;
 }
 
 header a:hover {
-  color: white;
+  color: var(--color-font-primary);
 }
 
 .titleSite {
-  font-family: "Cubano", sans-serif;
-  font-weight: 400;
+  font-family: var(--font-primary);
 }
 
 /**** NAVBAR ****/
 .navbar {
-  background-color: rgba(42, 46, 52, 0.9);
-  font-family: "Cubano", sans-serif;
-  font-weight: 400;
+  background-color: var(--color-shadow-hover);
+  font-family: var(--font-primary);
   font-size: 1.2rem;
   padding: 1rem;
   z-index: 10;
-  box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0.5rem 0.5rem 2rem var(--color-shadow);
   position: sticky;
   top: 0;
 }
 
 .navbar-collapse {
-  justify-items: space-around;
+  justify-items: center;
 }
 
 .nav-link {
-  color: white;
+  color: var(--color-font-primary);
   text-decoration: none;
+  border-radius: 0.5rem;
+  transition: 0.7s;
 }
 
 .nav-link:hover {
   padding: 0.5rem;
-  background-color: #25E35F;
-  color: #2A2E34 !important;
+  background-color: var(--color-green);
+  color: var(--color-font-secondary) !important;
 }
 
 .btn-outline-success {
-  color: #CE5C5C;
-  border-color: #CE5C5C;
-  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
+  color: var(--color-orange);
+  border-color: var(--color-orange);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+  transition: 0.7s;
 }
 
 .btn-outline-success:hover {
-  color: #2A2E34;
-  border-color: #CE5C5C;
-  background-color: #CE5C5C;
+  color: var(--color-font-secondary);
+  border-color: var(--color-orange);
+  background-color: var(--color-orange);
+
+}
+
+.btn-outline-info {
+  color: var(--color-blue);
+  border-color: var(--color-blue);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+  transition: 0.7s;
+}
+
+.btn-outline-info:hover {
+  color: var(--color-font-secondary);
+  border-color: var(--color-blue);
+  background-color: var(--color-blue);
+
 }
 
 .cartBar {
   display: none;
+  font-size: 1.25rem;
 }
 
-.rounded-pill {
-  background-color: #9166CC;
-  color: white;
-  font-family: "Sofia Pro", sans-serif;
-  font-size: 0.7rem;
+.cart {
+  font-size: 1.7rem;
+}
+
+.badge {
+  background-color: var(--color-violet);
+  color: var(--color-font-primary);
+  font-family: var(--font-secondary);
+  font-size: 0.9rem;
 }
 
 .carousel-caption {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--color-shadow);
   padding: 1rem;
   text-align: center;
   border-radius: 0.5rem;
 }
 
 .carousel-caption h5 {
-  font-family: "Cubano", sans-serif;
-  font-weight: 400;
+  font-family: var(--font-primary);
   font-size: 3rem;
-  color: #25E35F;
+  color: var(--color-green);
 }
 
 .carousel-caption p {
-  font-family: "Sofia Pro", sans-serif;
+  font-family: var(--font-secondary);
   font-weight: 400;
   font-size: 1.5rem;
 }
@@ -138,21 +178,21 @@ header a:hover {
 /**** MAIN ****/
 main {
   text-align: center;
-  font-family: "Sofia Pro", sans-serif;
-  color: white;
+  font-family: var(--font-secondary);
+  color: var(--color-font-primary);
 }
 
 .containerContent {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
   grid-auto-rows: 21.875rem;
-  gap: 2rem;
+  gap: 2.5rem;
   padding: 2rem;
   place-items: center;
   place-content: center space-around;
   justify-items: center;
-  color: white;
-  font-family: "Sofia Pro", sans-serif;
+  color: var(--color-font-primary);
+  font-family: var(--font-secondary);
   font-size: 1.2rem;
   border-radius: 0.5rem;
 }
@@ -179,10 +219,10 @@ main {
 .subtitle {
   grid-column: 1/-1;
   grid-template-rows: 3.125rem;
-  color: #151B1E;
+  color: var(--color-font-secondary);
   padding: 1rem;
-  background-color: #9166CC;
-  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
+  background-color: var(--color-violet);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
   border-radius: 0.5rem;
 }
 
@@ -190,8 +230,7 @@ main {
   display: block;
   text-align: center;
   margin-bottom: 0;
-  font-family: "Cubano", sans-serif;
-  font-weight: 400;
+  font-family: var(--font-primary);
 }
 
 .filters {
@@ -199,12 +238,12 @@ main {
 }
 
 .filters>select {
-  width: 13rem;
+  width: 18rem;
   height: 2rem;
   font-size: 0.9rem;
-  font-family: "Roboto Mono", sans-serif;
-  color: white;
-  background-color: rgb(77, 77, 77);
+  font-family: var(--font-tertiary);
+  color: var(--color-font-primary);
+  background-color: var(--color-bg-secondary);
   border: none;
   border-radius: 0.5rem;
   margin: 1rem;
@@ -219,14 +258,14 @@ main {
   justify-content: space-between;
   align-items: center;
   row-gap: 1rem;
-  background-image: linear-gradient(to bottom, #12181B, #2A2E35);
+  background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
   padding: 2rem;
   border-radius: 0.5rem;
-  color: white;
-  font-family: "Sofia Pro", sans-serif;
+  color: var(--color-font-primary);
+  font-family: var(--font-secondary);
   font-size: 1.2rem;
-  box-shadow: 0px 0.0625rem 0.625rem rgba(0, 0, 0, 0.2);
-  transition: all 400ms ease;
+  box-shadow: 0px 0.0625rem 0.625rem var(--color-shadow);
+  transition: all 0.7s ease;
   width: min(18.75rem, 100%);
 }
 
@@ -236,13 +275,13 @@ main {
 
 .productCard:hover,
 .productCardHome:hover {
-  box-shadow: 0.3125rem 0.3125rem 1.25rem black;
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
   transform: translateY(-3%);
 }
 
 .btn {
   text-transform: uppercase;
-  font-family: "Sofia Pro", sans-serif;
+  font-family: var(--font-secondary);
   border-radius: 0.5rem;
   padding: 0.5rem;
   margin-left: 0.5rem;
@@ -253,7 +292,7 @@ main {
   display: flex;
   flex-direction: column;
   margin: 5rem;
-  background-image: linear-gradient(#12181B, #2A2E35);
+  background-image: linear-gradient(var(--color-bg-primary), var(--color-bg-secondary));
   padding: 5rem;
   border-radius: 0.5rem;
 }
@@ -266,18 +305,18 @@ main {
     "form";
   gap: 2rem;
   padding: 2rem;
-  color: white;
-  font-family: "Sofia Pro", sans-serif;
+  color: var(--color-font-primary);
+  font-family: var(--font-secondary);
   font-size: 1.2rem;
   border-radius: 0.5rem;
 }
 
 .subtitleForm {
   grid-area: subtitleForm;
-  color: #151B1E;
+  color: var(--color-font-secondary);
   padding: 1rem;
-  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
-  background-color: #9166CC;
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+  background-color: var(--color-violet);
   border-radius: 0.5rem;
 }
 
@@ -285,8 +324,8 @@ main {
   grid-area: form;
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(to bottom, #12181B, #2A2E35);
-  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
+  background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
   border-radius: 1rem;
   width: min(40rem, 100%);
   height: 100%;
@@ -302,6 +341,16 @@ main {
   margin-bottom: 1rem;
 }
 
+.form p {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.form p>a {
+  color: var(--color-green);
+  text-decoration: none;
+}
+
 .camp label {
   display: block;
   font-size: 1.2rem;
@@ -312,9 +361,16 @@ textarea {
   width: 100%;
   padding: 0.4rem;
   border-radius: 0.5rem;
-  font-family: "Sofia Pro", sans-serif;
+  font-family: var(--font-secondary);
   font-size: 1rem;
   font-weight: bold;
+}
+
+.camp input:focus,
+input:focus,
+textarea:focus {
+  background-color: var(--color-bg-secondary) !important;
+  color: var(--color-font-primary) !important;
 }
 
 .btnSubmitNews {
@@ -339,10 +395,10 @@ textarea {
 .subtitleVideo {
   grid-area: subtitleVideo;
   margin: 2rem;
-  color: #151B1E;
+  color: var(--color-font-secondary);
   padding: 0.5rem;
-  background-color: #9166CC;
-  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
+  background-color: var(--color-violet);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
   border-radius: 0.5rem;
 }
 
@@ -353,10 +409,10 @@ textarea {
 .subtitleMap {
   grid-area: subtitleMap;
   margin: 2rem;
-  color: #151B1E;
+  color: var(--color-font-secondary);
   padding: 0.5rem;
-  background-color: #9166CC;
-  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
+  background-color: var(--color-violet);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
   border-radius: 0.5rem;
 }
 
@@ -367,7 +423,7 @@ textarea {
 iframe {
   border-radius: 0.5rem;
   margin: 3rem;
-  box-shadow: 0.3125rem 0.3125rem 1.25rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
   grid-area: media;
 }
 
@@ -381,16 +437,16 @@ iframe {
     "total total totalPrice totalPrice"
     "btnBuy btnBuy btnBuy btnBuy";
   justify-content: center;
-  align-content: bottom;
+  align-content: flex-start;
   justify-items: center;
   align-items: center;
-  background-image: linear-gradient(to bottom, #12181B, #2A2E35);
+  background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
 }
 
 .offcanvas-header {
-  background-color: #9166CC;
-  font-family: "Cubano", sans-serif;
-  color: #2A2E34;
+  background-color: var(--color-violet);
+  font-family: var(--font-primary);
+  color: var(--color-font-secondary);
 }
 
 .product {
@@ -416,20 +472,20 @@ iframe {
 
 /**** FOOTER ****/
 .footerCopyright {
-  background-color: #13191C;
+  background-color: var(--color-bg-primary);
   padding: 1.5rem;
   text-align: center;
-  color: white;
-  font-family: "Sofia Pro", sans-serif;
+  color: var(--color-font-primary);
+  font-family: var(--font-secondary);
   font-size: 1rem;
 }
 
 .footerSocials {
   text-align: center;
-  background-color: #202429;
+  background-color: var(--color-bg-secondary);
   padding: 2rem;
-  color: white;
-  font-family: "Sofia Pro", sans-serif;
+  color: var(--color-font-primary);
+  font-family: var(--font-secondary);
 }
 
 .sectionSocials {
@@ -453,8 +509,8 @@ iframe {
   padding: 1.5rem;
   border-radius: 2rem;
   border-width: 0.1rem;
-  border-color: #25E35F;
-  box-shadow: 0px 0.0625rem 0.625rem #25E35F;
+  border-color: var(--color-green);
+  box-shadow: 0px 0.0625rem 0.625rem var(--color-green);
 }
 
 .sectionSocials>div h3 {
@@ -477,8 +533,8 @@ iframe {
   padding: 0.8rem;
   border-radius: 2rem;
   border-width: 0.1rem;
-  border-color: #9166CC;
-  box-shadow: 0px 0.0625rem 0.625rem #9166CC;
+  border-color: var(--color-violet);
+  box-shadow: 0px 0.0625rem 0.625rem var(--color-violet);
 }
 
 .newsletter>form {
@@ -499,27 +555,30 @@ iframe {
   padding: 1rem;
   border-radius: 2rem;
   border-width: 0.1rem;
-  border-color: #EE5352;
-  box-shadow: 0px 0.0625rem 0.625rem #EE5352;
+  border-color: var(--color-orange);
+  box-shadow: 0px 0.0625rem 0.625rem var(--color-orange)
 }
 
 .sectionSocials i {
   padding: 0.5rem;
   font-size: 2rem;
-  color: white;
+  color: var(--color-font-primary);
 }
 
 
 #youtube:hover {
-  color: red;
+  transition: 0.7s;
+  color: #F21100;
 }
 
 #facebook:hover {
-  color: blue;
+  transition: 0.7s;
+  color: #3F62A8;
 }
 
 #instagram:hover {
-  color: rgb(211, 76, 98);
+  transition: 0.7s;
+  color: #BC1885;
 }
 
 .centerItemsGrid {
@@ -528,7 +587,7 @@ iframe {
 }
 
 /**** BREAKPOINTS MEDIA QUERIES ****/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 576px) {
 
   .logoSite {
     width: 15rem;
@@ -560,7 +619,7 @@ iframe {
 }
 
 /**** BREAKPOINT TABLET ****/
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 576px) {
 
   html {
     font-size: 100%;
@@ -629,17 +688,9 @@ iframe {
 }
 
 /**** BREAKPOINT LAPTOP ****/
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 768px) {
   .titleSite {
     font-size: 3.5rem;
-  }
-
-  .cart {
-    display: none;
-  }
-
-  .cartBar {
-    display: block;
   }
 
   .sectionSocials {
@@ -656,7 +707,15 @@ iframe {
 }
 
 /**** BREAKPOINT DESKTOP ****/
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 992px) {
+
+  .cart {
+    display: none;
+  }
+
+  .cartBar {
+    display: block;
+  }
 
   iframe {
     width: 65rem;
