--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@
   src: url("../fonts/RobotoMono-Light.ttf");
 }
 
-
 /**** GLOBAL SETTINGS ****/
 
 /**** Definición de variables ****/
@@ -123,6 +122,10 @@ header a:hover {
   padding: 0.5rem;
   background-color: var(--color-green);
   color: var(--color-font-secondary) !important;
+}
+
+.navbar-collapse {
+  text-align: center;
 }
 
 .btn-outline-success {
@@ -291,7 +294,6 @@ main {
   align-items: center;
   row-gap: 1rem;
   background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
-  padding: 2rem;
   border-radius: 1rem;
   color: var(--color-font-primary);
   font-family: var(--font-secondary);
@@ -299,6 +301,13 @@ main {
   box-shadow: 0rem 0.0625rem 0.625rem var(--color-shadow);
   transition: all 0.7s ease;
   width: min(18.75rem, 100%);
+}
+
+.card-img-top {
+  width: 100%;
+  height: 15.625rem;
+  object-fit: cover;
+  border-radius: 1rem 1rem 0 0;
 }
 
 .card-body {
