--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@
   --color-shadow: rgba(0, 0, 0, 0.5);
   --color-shadow-hover: rgba(42, 46, 52, 0.9);
   --color-violet: #9166CC;
-  --color-green: #25E35F;
-  --color-orange: #CE5C5C;
+  --color-green: #01ff5f;
+  --color-pink: #ff0087;
   --color-blue: #51C5F7;
   --font-primary: "Cubano", sans-serif;
   --font-secondary: "Sofia Pro", sans-serif;
@@ -175,7 +175,7 @@ header a:hover {
 }
 
 .badgeCart {
-  background-color: var(--color-violet);
+  background-color: var(--color-pink);
   color: var(--color-font-primary);
   font-family: var(--font-secondary);
   font-size: 0.9rem;
@@ -211,7 +211,7 @@ main {
 .containerContent {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
-  grid-auto-rows: 21.875rem;
+  grid-auto-rows: 26rem;
   gap: 4rem;
   padding: 2rem;
   place-items: center;
@@ -528,7 +528,7 @@ iframe {
   justify-content: center;
   align-content: center;
   place-items: center;
-  background-color: var(--color-violet);
+  background-color: var(--color-pink);
   font-family: var(--font-primary);
   color: var(--color-font-secondary);
 }
@@ -563,8 +563,16 @@ iframe {
 }
 
 /**** FOOTER ****/
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr;
+  place-content: center;
+  align-items: center;
+  
+}
 .footerCopyright {
-  background-color: var(--color-bg-primary);
+  background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
   padding: 1.5rem;
   text-align: center;
   color: var(--color-font-primary);
@@ -573,8 +581,13 @@ iframe {
 }
 
 .footerSocials {
+  display: grid;
+  grid-template-columns: 1fr;
+  place-content: center;
+  place-items: center;
+  row-gap: 2rem;
   text-align: center;
-  background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
+  background-image: linear-gradient(to top, var(--color-bg-primary), var(--color-bg-secondary));
   padding: 2rem;
   color: var(--color-font-primary);
   font-family: var(--font-secondary);
@@ -621,7 +634,7 @@ iframe {
 }
 
 .sectionAbout {
-  background-image: linear-gradient(to top, var(--color-bg-primary), var(--color-bg-secondary));
+  background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
   padding: 1.5rem;
   border-radius: 1rem;
   box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
@@ -629,7 +642,7 @@ iframe {
 
 .sectionAbout h3 {
   color: var(--color-font-secondary);
-  background-color: var(--color-orange);
+  background-color: var(--color-pink);
   border-radius: 0.5rem;
   padding: 0.5rem;
   box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
