--- a/scss/components/_multimedia.scss
+++ b/scss/components/_multimedia.scss
@@ -41,5 +41,20 @@
             width: 20rem;
             height: 15rem;
         }
+
+        @include sm {
+            width: 35rem;
+            height: 20rem;
+        }
+
+        @include md {
+            width: 45rem;
+            height: 25rem;
+        }
+
+        @include lg {
+            width: 65rem;
+            height: 45rem;
+        }
     }
 }
