--- a/scss/utilities/_breakpoints.scss
+++ b/scss/utilities/_breakpoints.scss
@@ -1,9 +1,9 @@
-
+// BREAKPOINTS MEDIA QUERIES
 $breakpoints: (
     "xs": 0,
-    "sm": 480px,
-    "md": 720px,
-    "lg": 960px,
+    "sm": 576px,
+    "md": 768px,
+    "lg": 992px,
     "xl": 1200px,
 );
 
